# kolmox

./: .gitignore  AGENTS.md  README.md  justfile
dataset/grokvswiki/: dataset.csv
dataset/imdb/: dataset.csv
dataset/wikipedia/: dataset.csv
fetcher/: main.py
ncd/: Cargo.toml
ncd/benchmarks/: Cargo.toml  benchmark.ipynb
ncd/benchmarks/assets/: ruwiki.txt  wikipedia.txt
ncd/benchmarks/src/: main.rs
ncd/benchmarks/src/lib/: dataset.rs  mod.rs
ncd/benchmarks/src/lib/bench_tests/: bk_tree.rs  distance_matrix.rs  mod.rs  triangle_inequality.rs  wiki_vs_grok.rs
ncd/benchmarks/src/lib/benchmarks/: distance_matrix.rs  mod.rs  wiki_vs_grok.rs
ncd/brotli-benchmark/: Cargo.toml  benchmark.ipynb
ncd/brotli-benchmark/src/: main.rs
ncd/brotli-benchmark/src/lib/: mod.rs
ncd/brotli-benchmark/src/lib/benchmarks/: distance_matrix.rs  mod.rs  triangle_inequality.rs  wiki_vs_grok.rs
ncd/notebooks/: grokpedia-vs-wikipedia.ipynb
ncd/notebooks/.ipynb_checkpoints/: grokpedia-vs-wikipedia-checkpoint.ipynb
ncd/src/lib/: Cargo.toml  lib.rs  test_helpers.rs
ncd/src/lib/compress/: brotli.rs  cache.rs  mod.rs  zstd.rs
ncd/src/lib/filter/: extract_main.rs  filter_attributes.rs  mod.rs  strip_content.rs
ncd/src/lib/filter/content/: common.rs  grok.rs  mod.rs  wiki.rs
