[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[lib]
name = "benchmarks"
path = "src/lib/mod.rs"

[[bin]]
name = "benchmarks"
path = "src/main.rs"

[dependencies]
kolmox = { path = "../src/lib" }
plotly = "0.13"
urlencoding = "2.1"
rayon = "1.11"
itertools = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = { version = "0.18", features = ["rayon"] }
clap = { version = "4.5", features = ["derive"] }
statrs = "0.18"

[dev-dependencies]
assert_approx_eq = "1.1"
